# propmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: propmap.hpp
src/: demo.cpp
